# CudaLBFGS

./: CMakeLists.txt  CheckComputeCapability.cmake  FindEigen.cmake  README.md  README.txt  cuda_compute_capability.c
include/CudaLBFGS/: cost_function.h  error_checking.h  lbfgs.h  timer.h
lbfgs/: CMakeLists.txt  CudaLBFGSBuildTreeSettings.cmake.in  CudaLBFGSConfig.cmake.in  CudaLBFGSConfigVersion.cmake.in  lbfgs.cu  linesearch_cpu.cpp  linesearch_cpu.h  linesearch_gpu.h
lbfgs/tests/: CMakeLists.txt  matrices.h  quadratic_test_cpu.cu  quadratic_test_gpu_gpu.cu  quadratic_test_gpu_host.cu  rosenbrock_test_cpu.cu  rosenbrock_test_gpu_gpu.cu  rosenbrock_test_gpu_host.cu
projects/: CMakeLists.txt
projects/parabola/: CMakeLists.txt  parabola.cu
projects/quadratic/: CMakeLists.txt  quadratic.cu
projects/rosenbrock/: CMakeLists.txt  rosenbrock.cu  rosenbrock_nd.cu
scripts/: plot_linesearch.py
